feat: se agrega funcionalidad

--- a/index.html
+++ b/index.html
@@ -445,7 +445,6 @@
             </div>
         </section>
 
-
         <section class="clients">
             <div class="row ">
                 <div class="clients__header">
@@ -1202,11 +1201,11 @@
             <div class="row">
                 <div class="who_are__item">
                     <figure class="who_are__figure">
-                        <img src="static/dist/images/mocks/648x907.png" class="who_are__img" alt="Guillermo Oliveto"
-                            title="Guillermo Oliveto" loading="lazy">
+                        <img src="static/dist/images/about/2x/guillermo-oliveto@2x.webp" class="who_are__img"
+                            alt="Guillermo Oliveto" title="Guillermo Oliveto" loading="lazy">
                     </figure>
 
-                    <div class="who_are__info active">
+                    <div class="who_are__info">
                         <h3 class="who_are__title">Guillermo Oliveto</h3>
                         <div class="who_are__content who_are__feature active">
                             <p class="who_are__txt">Licenciado en Administración de Empresas</p>
@@ -1242,11 +1241,52 @@
                                 Vicepresidente en los períodos 2003-2007 y 2011-2013
                                 Premio al Estilo Profesional de la Universidad de Palermo en 2012.</p>
                             <div class="who_are__footer who_are__hidden">
-                                <button class="who_are__button" type="button">Ocultar +</button>
+                                <button class="who_are__button" type="button">Ocultar </button>
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="who_are__item who_are__item--invert ">
+                    <figure class="who_are__figure">
+                        <img src="static/dist/images/about/2x/sil-almada@2x.webp" class="who_are__img"
+                            alt="Guillermo Oliveto" title="Guillermo Oliveto" loading="lazy">
+                    </figure>
 
+                    <div class="who_are__info">
+                        <h3 class="who_are__title">Sil Almada</h3>
+                        <div class="who_are__content who_are__feature active">
+                            <p class="who_are__txt">Licenciada en Comercialización</p>
+                            <p class="who_are__txt">Fundadora y Directora de Almatrends Lab – 2015</p>
+                            <p class="who_are__txt">Trend Forecaster</p>
+                            <p class="who_are__txt">Curadora de Marcas</p>
+                            <div class="who_are__footer">
+                                <button class="who_are__button" type="button">Conocer +</button>
+                            </div>
+                        </div>
+                        <div class="who_are__content">
+                            <p>Licenciada en Comercialización </p>
+                            <p>Fundadora y Directora de Almatrends Lab – 2015</p>
+                            <p>Trend Forecaster</p>
+                            <p>Curadora de Marcas</p>
+                            <p>Especialista en la detección temprana de vibraciones culturales, la conceptualización de
+                                patrones conductuales y la visualización de tendencias. </p>
+                            <p>Tiene más de 25 años de trayectoria profesional en marketing, diseño de productos y
+                                servicios, segmentación de mercados y comunicación de marcas. </p>
+                            <p>Realizó programas presenciales de especialización en tendencias en </p>
+                            <p>The Future Institute (Copenhagen), The Future Lab (Londres), y PSFK (New York).</p>
+                            <p>En el ámbito local complementó su formación profesional como Planner y Cool Hunter -
+                                Escuela de Creativos- y Diseño -Universidad de Palermo</p>
+                            <p>El 27 de mayo de 2020, publicó junto con Guillermo Oliveto el Informe “Tendencias y
+                                tensiones en el nuevo hábitat viral”</p>
+                            <p>Ese mismo día lanzó al mercado el sitio web de Almatrends Lab donde se publican
+                                regularmente tendencias organizadas en 8 vectores de análisis: </p>
+                            <p>Desigh & Lifestyle, Retail, Foodie, Wellness, Innovation + AI,</p>
+                            <p>Consumer Insights, Sustainable y Branding</p>
+                            <div class="who_are__footer who_are__hidden">
+                                <button class="who_are__button" type="button">Ocultar </button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -1601,6 +1641,7 @@
 
         });
     </script>
+    <script src="static/src/js/partials/WhoWeAre.js"></script>
     <script>
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('service-worker.js')
