feat: se agrega lightbox

--- a/index.html
+++ b/index.html
@@ -1585,6 +1585,44 @@
     </main>
 
 
+    <!-- lightbox -->
+    <div class="lightbox active">
+        <div class="lightbox__overlay" data-lightbox-close></div>
+        <div class="lightbox__overflow">
+            <div class="lightbox__wrap">
+
+                <figure class="lightbox__figure">
+                    <img src="static/dist/images/books/2x/libro-4@2x.jpg" alt="image" title="image"
+                        class="lightbox__img" width="606" height="580">
+                </figure>
+                <div class="lightbox__data">
+                    <button type="button" class="lightbox__nav" aria-label="close lightbox" data-lightbox-close>
+                        <svg class="lightbox__nav__svg" width="32" height="30" viewBox="0 0 32 30" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path d="M0.999951 2.02152L30.4999 27.9785" stroke="black" />
+                            <path d="M1 28.6443L31 2.02165" stroke="black" />
+                        </svg>
+                    </button>
+                    <p class="lightbox__title">Humanidad Ampliada. 2022.</p>
+
+                    <p class="lightbox__text">¿Cómo quedará la sociedad después del shock? ¿La tecnología que nos ayudó
+                        a sobrevivir puede cobrarnos un precio demasiado alto? ¿El consumo se volvió un ansiolítico?
+                        ¿Qué tan preparados estamos para comprender la complejidad de esta Humanidad ampliada, que es
+                        física y digital a la vez? ¿Cómo imaginar los futuros posibles?</p>
+                    <div class="lightbox__bottom">
+                        <a href="#" class="lightbox__bottom__a lightbox__comprar" target="_blank"
+                            rel="noopener noreferrer">Comprar</a>
+                        <a href="#" class="lightbox__bottom__a lightbox__reviews" target=" _blank"
+                            rel="noopener noreferrer">Reviews</a>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
