--- a/index.html
+++ b/index.html
@@ -1586,23 +1586,24 @@
 
 
     <!-- lightbox -->
-    <div class="lightbox active">
+    <div class="lightbox ">
         <div class="lightbox__overlay" data-lightbox-close></div>
         <div class="lightbox__overflow">
             <div class="lightbox__wrap">
+                <button type="button" class="lightbox__nav" aria-label="close lightbox" data-lightbox-close>
 
+                    <svg class="lightbox__nav__svg" height="32" width="32" data-name="Capa 2"
+                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54.52 54.52">
+                        <path d="M27.26 0v54.52m27.26-27.26H0"
+                            style="fill:none;stroke:#333;stroke-miterlimit:10;stroke-width:3px" />
+                    </svg>
+                </button>
                 <figure class="lightbox__figure">
                     <img src="static/dist/images/books/2x/libro-4@2x.jpg" alt="image" title="image"
                         class="lightbox__img" width="606" height="580">
                 </figure>
                 <div class="lightbox__data">
-                    <button type="button" class="lightbox__nav" aria-label="close lightbox" data-lightbox-close>
-                        <svg class="lightbox__nav__svg" width="32" height="30" viewBox="0 0 32 30" fill="none"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path d="M0.999951 2.02152L30.4999 27.9785" stroke="black" />
-                            <path d="M1 28.6443L31 2.02165" stroke="black" />
-                        </svg>
-                    </button>
+
                     <p class="lightbox__title">Humanidad Ampliada. 2022.</p>
 
                     <p class="lightbox__text">¿Cómo quedará la sociedad después del shock? ¿La tecnología que nos ayudó
