feat: se agrega funcionalidad de lightbox

--- a/index.html
+++ b/index.html
@@ -1299,65 +1299,142 @@
                             <div class="books_item">
                                 <img src="static/dist/images/books/2x/libro-5@2x.jpg" class="books_item__img"
                                     width="649" height="617" alt="book 1" title="book 1" loading="lazy">
-                                <button type="button" class="books_item__btn">
+                                <button type="button" class="books_item__btn" data-lightbox data-index="1">
                                     <svg height="54" width="54" data-name="Capa 2" xmlns="http://www.w3.org/2000/svg"
                                         viewBox="0 0 54.52 54.52">
                                         <path d="M27.26 0v54.52m27.26-27.26H0"
                                             style="fill:none;stroke:#333;stroke-miterlimit:10;stroke-width:3px" />
                                     </svg>
                                 </button>
+
+
+                                <div class="books__data">
+                                    <h3 class="book__title">Humanidad Ampliada.
+                                        2022.
+                                    </h3>
+                                    <a href="http://www.google.com" class="book__comprar" target="_blank"
+                                        rel="noopener noreferrer">Comprar</a>
+                                    <a href="http://www.google.com/reviews" class="book__reviews" target=" _blank"
+                                        rel="noopener noreferrer">Reviews</a>
+
+                                    <p class="book__text">¿Cómo quedará la sociedad después del shock? ¿La tecnología
+                                        que nos ayudó a sobrevivir puede cobrarnos un precio demasiado alto? ¿El consumo
+                                        se volvió un ansiolítico? ¿Qué tan preparados estamos para comprender la
+                                        complejidad de esta Humanidad ampliada, que es física y digital a la vez? ¿Cómo
+                                        imaginar los futuros posibles?
+                                    </p>
+
+                                </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="books_item">
                                 <img src="static/dist/images/books/2x/libro-4@2x.jpg" class="books_item__img"
                                     width="649" height="617" alt="book 1" title="book 1" loading="lazy">
-                                <button type="button" class="books_item__btn">
+                                <button type="button" class="books_item__btn" data-lightbox data-index="2">
                                     <svg height="54" width="54" data-name="Capa 2" xmlns="http://www.w3.org/2000/svg"
                                         viewBox="0 0 54.52 54.52">
                                         <path d="M27.26 0v54.52m27.26-27.26H0"
                                             style="fill:none;stroke:#333;stroke-miterlimit:10;stroke-width:3px" />
                                     </svg>
                                 </button>
+                                <div class="books__data">
+                                    <h3 class="book__title">Argenchip.
+                                        2014.
+                                    </h3>
+                                    <a href="http://www.google.com/2" class="book__comprar" target="_blank"
+                                        rel="noopener noreferrer">Comprar</a>
+                                    <a href="http://www.google.com/reviews/2/" class="book__reviews" target=" _blank"
+                                        rel="noopener noreferrer">Reviews</a>
+                                    <p class="book__text">El consumo ha dejado de ser un tema meramente económico para
+                                        transformarse en un fenómeno social de fuerte impacto político: ahora los
+                                        ciudadanos votan como consumidores, las marcas actúan como políticos y los
+                                        políticos comunican como marcas.</p>
+
+                                </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="books_item">
                                 <img src="static/dist/images/books/2x/libro-3@2x.jpg" class="books_item__img"
                                     width="649" height="617" alt="book 1" title="book 1" loading="lazy">
-                                <button type="button" class="books_item__btn">
+                                <button type="button" class="books_item__btn" data-lightbox data-index="3">
                                     <svg height="54" width="54" data-name="Capa 2" xmlns="http://www.w3.org/2000/svg"
                                         viewBox="0 0 54.52 54.52">
                                         <path d="M27.26 0v54.52m27.26-27.26H0"
                                             style="fill:none;stroke:#333;stroke-miterlimit:10;stroke-width:3px" />
                                     </svg>
                                 </button>
+                                <div class="books__data">
+                                    <h3 class="book__title">Market Research Explained
+                                        2008.
+                                    </h3>
+                                    <a href="http://www.google.com/3/" class="book__comprar" target="_blank"
+                                        rel="noopener noreferrer">Comprar</a>
+                                    <a href="http://www.google.com/reviews/3/" class="book__reviews" target=" _blank"
+                                        rel="noopener noreferrer">Reviews</a>
+                                    <p class="book__text">ESOMAR is a global membership association for market research
+                                        and insights that was founded in 1947.[1][a] The name ESOMAR is an abbreviation
+                                        of their original name, the European Society for Opinion and Marketing Research,
+                                        which reflects the original catchment of the organisation.</p>
+
+                                </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="books_item">
                                 <img src="static/dist/images/books/2x/libro-2@2x.jpg" class="books_item__img"
                                     width="649" height="617" alt="book 1" title="book 1" loading="lazy">
-                                <button type="button" class="books_item__btn">
+                                <button type="button" class="books_item__btn" data-lightbox data-index="4">
                                     <svg height="54" width="54" data-name="Capa 2" xmlns="http://www.w3.org/2000/svg"
                                         viewBox="0 0 54.52 54.52">
                                         <path d="M27.26 0v54.52m27.26-27.26H0"
                                             style="fill:none;stroke:#333;stroke-miterlimit:10;stroke-width:3px" />
                                     </svg>
                                 </button>
+                                <div class="books__data">
+                                    <h3 class="book__title">El Futuro ya Llegó
+                                        2007.
+                                    </h3>
+                                    <a href="http://www.google.com/4/" class="book__comprar" target="_blank"
+                                        rel="noopener noreferrer">Comprar</a>
+                                    <a href="http://www.google.com/reviews/4/" class="book__reviews" target=" _blank"
+                                        rel="noopener noreferrer">Reviews</a>
+                                    <p class="book__text">Estamos desorientados. No entendemos. Nos agobia la
+                                        incertidumbre. Nos invaden las paradojas. Nos abruma el sinsentido. ¿Qué nos
+                                        pasa? Sucede que estamos en medio de La Tercera Gran Ruptura en la historia de
+                                        la humanidad, y en esta instancia sólo se puede hablar de "antes y después".</p>
+
+                                </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="books_item">
                                 <img src="static/dist/images/books/2x/libro-1@2x.jpg" class="books_item__img"
                                     width="649" height="617" alt="book 1" title="book 1" loading="lazy">
-                                <button type="button" class="books_item__btn">
+                                <button type="button" class="books_item__btn" data-lightbox data-index="5">
                                     <svg height="54" width="54" data-name="Capa 2" xmlns="http://www.w3.org/2000/svg"
                                         viewBox="0 0 54.52 54.52">
                                         <path d="M27.26 0v54.52m27.26-27.26H0"
                                             style="fill:none;stroke:#333;stroke-miterlimit:10;stroke-width:3px" />
                                     </svg>
                                 </button>
+                                <div class="books__data">
+                                    <h3 class="book__title">No son Extraterrestres
+                                        2002.
+                                    </h3>
+                                    <a href="http://www.google.com/4/" class="book__comprar" target="_blank"
+                                        rel="noopener noreferrer">Comprar</a>
+                                    <a href="http://www.google.com/reviews/4/" class="book__reviews" target=" _blank"
+                                        rel="noopener noreferrer">Reviews</a>
+                                    <p class="book__text">Con un estilo audaz y desenfandado, este joven consultor
+                                        desafía permanentemente al lector a tener coraje de quemar las naves. A
+                                        abandonar sus viejos conocimientos, creencias y prejuicios. Lo incita a
+                                        deleitarse con el descubrimiento de una nueva forma de entender la realidad.
+                                        S.O.S. a quien pueda escucharnos: en la Argentina se nos rompió el tablero de
+                                        comandos.</p>
+
+                                </div>
                             </div>
                         </div>
 
@@ -1681,6 +1758,7 @@
         });
     </script>
     <script src="static/src/js/partials/WhoWeAre.js"></script>
+    <script src="static/src/js/partials/Lightbox.js"></script>
     <script>
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('service-worker.js')
