--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                 </div>
                             </div>
                             <div class="item_how__image">
-                                <img src="static/dist/images/mocks/1920x368.png" class="item_how__img" width="1920"
+                                <img src="static/dist/images/how/1x/how-1.webp" class="item_how__img" width="1920"
                                     height="368" alt="Ejes de Trabajo W" title="Ejes de Trabajo W">
                             </div>
                         </div>
@@ -217,7 +217,7 @@
 
 
                             <div class="item_how__image">
-                                <img src="static/dist/images/mocks/1920x368.png" class="item_how__img" width="1920"
+                                <img src="static/dist/images/how/1x/how-2.webp" class="item_how__img" width="1920"
                                     height="368" alt="Ejes de Trabajo W" title="Ejes de Trabajo W">
                             </div>
                         </div>
@@ -260,7 +260,7 @@
 
 
                             <div class="item_how__image">
-                                <img src="static/dist/images/mocks/1920x368.png" class="item_how__img" width="1920"
+                                <img src="static/dist/images/how/1x/how-3.webp" class="item_how__img" width="1920"
                                     height="368" alt="Ejes de Trabajo W" title="Ejes de Trabajo W">
                             </div>
                         </div>
@@ -302,7 +302,7 @@
 
 
                             <div class="item_how__image">
-                                <img src="static/dist/images/mocks/1920x368.png" class="item_how__img" width="1920"
+                                <img src="static/dist/images/how/1x/how-3.webp" class="item_how__img" width="1920"
                                     height="368" alt="Ejes de Trabajo W" title="Ejes de Trabajo W">
                             </div>
                         </div>
@@ -350,7 +350,7 @@
 
 
                             <div class="item_how__image">
-                                <img src="static/dist/images/mocks/1920x368.png" class="item_how__img" width="1920"
+                                <img src="static/dist/images/how/1x/how-4.webp" class="item_how__img" width="1920"
                                     height="368" alt="Ejes de Trabajo W" title="Ejes de Trabajo W">
                             </div>
                         </div>
@@ -399,7 +399,7 @@
 
 
                             <div class="item_how__image">
-                                <img src="static/dist/images/mocks/1920x368.png" class="item_how__img" width="1920"
+                                <img src="static/dist/images/how/1x/how-5.webp" class="item_how__img" width="1920"
                                     height="368" alt="Ejes de Trabajo W" title="Ejes de Trabajo W">
                             </div>
                         </div>
@@ -438,7 +438,7 @@
                             </div>
 
                             <div class="item_how__image">
-                                <img src="static/dist/images/mocks/1920x368.png" class="item_how__img" width="1920"
+                                <img src="static/dist/images/how/1x/how-6.webp" class="item_how__img" width="1920"
                                     height="368" alt="Ejes de Trabajo W" title="Ejes de Trabajo W">
                             </div>
                         </div>
@@ -1637,17 +1637,19 @@
                         <h4 class="footer__title">Contact us</h4>
                     </div>
                     <div class="footer__col">
-                        <a href="#" class="footer__lkn" target="_blank"
+                        <a href="mailto:info@consultoraw.com.ar" class="footer__lkn" target="_blank"
                             rel="noopener noreferrer">info@consultoraw.com.ar</a>
-                        <a href="#" class="footer__lkn" target="_blank"
+                        <a href="mailto:news@almatrends.net" class="footer__lkn" target="_blank"
                             rel="noopener noreferrer">news@almatrends.net</a>
                     </div>
                     <div class="footer__col">
-                        <a href="#" class="footer__lkn" target="_blank" rel="noopener noreferrer">T. +54 9 11 2508
+                        <a href="tel:+5491125080707" class="footer__lkn" target="_blank" rel="noopener noreferrer">T.
+                            +54 9 11 2508
                             0707</a>
                     </div>
                     <div class="footer__col">
-                        <a href="#" class="footer__lkn" target="_blank" rel="noopener noreferrer">
+                        <a href="https://maps.app.goo.gl/cDwxh8zBsxjJNYJp9" class="footer__lkn" target="_blank"
+                            rel="noopener noreferrer">
                             <span>Martín Coronado 3260,</span>
                             <span>Palacio Alcorta, Buenos Aires,</span>
                             <span>Argentina.</span>
