--- a/index.html
+++ b/index.html
@@ -1716,61 +1716,14 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            // Inicializa Swiper
-            var swiper = new Swiper('#slider_how', {});
-
-            // Añade event listeners a los enlaces del paginador
-            var pagerLinks = document.querySelectorAll('#slider_how .pager__a');
-            pagerLinks.forEach(function (link) {
-                link.addEventListener('click', function (event) {
-                    event.preventDefault();
-                    var slideIndex = parseInt(link.getAttribute('data-slide'));
-                    swiper.slideTo(slideIndex);
-                });
-            });
-            var believe = new Swiper('#believe', {
-
-            });
-
-            // Añade event listeners a los enlaces del paginador
-            var belivePagerLinks = document.querySelectorAll('#believe .pager__a');
-            belivePagerLinks.forEach(function (link) {
-                link.addEventListener('click', function (event) {
-                    event.preventDefault();
-                    var slideIndex = parseInt(link.getAttribute('data-slide'));
-                    believe.slideTo(slideIndex);
-                });
-            });
-        });
+    <script src="static/dist/js/Home-min.js"></script>
 
 
-        var swiper = new Swiper('.books .swiper-container', {
-            pagination: {
-                el: '.pager',
-                clickable: true,
-
-            },
-            slidesPerView: "auto",
-            spaceBetween: 30,
-
-        });
-        var interview = new Swiper('.interview .swiper-container', {
-            pagination: {
-                el: '.pager',
-                clickable: true,
-
-            },
-            slidesPerView: "auto",
-            spaceBetween: 30,
-
-        });
-    </script>
+    <!-- <script src="static/src/js/plugins/swiper-bundle.min.js"></script>
     <script src="static/src/js/partials/WhoWeAre.js"></script>
     <script src="static/src/js/partials/Lightbox.js"></script>
+    <script src="static/src/js/partials/Sliders.js"></script> -->
     <script>
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('service-worker.js')
