--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
     <meta property="og:type" content="website">
     <meta property="og:description"
         content="Ofrecemos consultoría estratégica basada en evidencias para ayudar a tu empresa a tomar decisiones informadas y efectivas.">
-    <meta property="og:url" content="https://patriciobalina.com.ar/">
+    <meta property="og:url" content="https://oliveto-bice.vercel.app/">
 
 
     <link rel="mask-icon" href="static/dist/images/apps/safari-pinned-tab.svg" color="#000">
 
     <!-- facebook -->
-    <meta property="og:image" content="static/dist/images/apps/facebook.jpg">
+    <meta property="og:image" content="https://oliveto-bice.vercel.app/static/dist/images/apps/facebook.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
     <!-- whatsapp -->
-    <meta property="og:image" content="static/dist/images/apps/wsp.jpg">
+    <meta property="og:image" content="https://oliveto-bice.vercel.app/static/dist/images/apps/wsp.jpg">
     <meta property="og:image:width" content="400">
     <meta property="og:image:height" content="400">
     <meta property="og:site_name" content="So What?">
@@ -1321,10 +1321,10 @@
                                     <h3 class="book__title">Humanidad Ampliada.
                                         2022.
                                     </h3>
-                                    <a href="http://www.google.com" class="book__comprar" target="_blank"
-                                        rel="noopener noreferrer">Comprar</a>
-                                    <a href="http://www.google.com/reviews" class="book__reviews" target=" _blank"
-                                        rel="noopener noreferrer">Reviews</a>
+                                    <a href="http://www.google.com" class="book__comprar" title="Comprar"
+                                        target="_blank" rel="noopener noreferrer">Comprar</a>
+                                    <a href="http://www.google.com/reviews" class="book__reviews" title="reviews"
+                                        target=" _blank" rel="noopener noreferrer">Reviews</a>
 
                                     <p class="book__text">¿Cómo quedará la sociedad después del shock? ¿La tecnología
                                         que nos ayudó a sobrevivir puede cobrarnos un precio demasiado alto? ¿El consumo
@@ -1351,10 +1351,10 @@
                                     <h3 class="book__title">Argenchip.
                                         2014.
                                     </h3>
-                                    <a href="http://www.google.com/2" class="book__comprar" target="_blank"
-                                        rel="noopener noreferrer">Comprar</a>
-                                    <a href="http://www.google.com/reviews/2/" class="book__reviews" target=" _blank"
-                                        rel="noopener noreferrer">Reviews</a>
+                                    <a href="http://www.google.com/2" class="book__comprar" title="Comprar"
+                                        target="_blank" rel="noopener noreferrer">Comprar</a>
+                                    <a href="http://www.google.com/reviews/2/" class="book__reviews" title="reviews"
+                                        target=" _blank" rel="noopener noreferrer">Reviews</a>
                                     <p class="book__text">El consumo ha dejado de ser un tema meramente económico para
                                         transformarse en un fenómeno social de fuerte impacto político: ahora los
                                         ciudadanos votan como consumidores, las marcas actúan como políticos y los
@@ -1378,10 +1378,10 @@
                                     <h3 class="book__title">Market Research Explained
                                         2008.
                                     </h3>
-                                    <a href="http://www.google.com/3/" class="book__comprar" target="_blank"
-                                        rel="noopener noreferrer">Comprar</a>
-                                    <a href="http://www.google.com/reviews/3/" class="book__reviews" target=" _blank"
-                                        rel="noopener noreferrer">Reviews</a>
+                                    <a href="http://www.google.com/3/" class="book__comprar" title="Comprar"
+                                        target="_blank" rel="noopener noreferrer">Comprar</a>
+                                    <a href="http://www.google.com/reviews/3/" class="book__reviews" title="reviews"
+                                        target=" _blank" rel="noopener noreferrer">Reviews</a>
                                     <p class="book__text">ESOMAR is a global membership association for market research
                                         and insights that was founded in 1947.[1][a] The name ESOMAR is an abbreviation
                                         of their original name, the European Society for Opinion and Marketing Research,
@@ -1405,10 +1405,10 @@
                                     <h3 class="book__title">El Futuro ya Llegó
                                         2007.
                                     </h3>
-                                    <a href="http://www.google.com/4/" class="book__comprar" target="_blank"
-                                        rel="noopener noreferrer">Comprar</a>
-                                    <a href="http://www.google.com/reviews/4/" class="book__reviews" target=" _blank"
-                                        rel="noopener noreferrer">Reviews</a>
+                                    <a href="http://www.google.com/4/" class="book__comprar" title="Comprar"
+                                        target="_blank" rel="noopener noreferrer">Comprar</a>
+                                    <a href="http://www.google.com/reviews/4/" class="book__reviews" title="reviews"
+                                        target=" _blank" rel="noopener noreferrer">Reviews</a>
                                     <p class="book__text">Estamos desorientados. No entendemos. Nos agobia la
                                         incertidumbre. Nos invaden las paradojas. Nos abruma el sinsentido. ¿Qué nos
                                         pasa? Sucede que estamos en medio de La Tercera Gran Ruptura en la historia de
@@ -1432,10 +1432,10 @@
                                     <h3 class="book__title">No son Extraterrestres
                                         2002.
                                     </h3>
-                                    <a href="http://www.google.com/4/" class="book__comprar" target="_blank"
-                                        rel="noopener noreferrer">Comprar</a>
-                                    <a href="http://www.google.com/reviews/4/" class="book__reviews" target=" _blank"
-                                        rel="noopener noreferrer">Reviews</a>
+                                    <a href="http://www.google.com/4/" class="book__comprar" title="Comprar"
+                                        target="_blank" rel="noopener noreferrer">Comprar</a>
+                                    <a href="http://www.google.com/reviews/4/" class="book__reviews" title="reviews"
+                                        target=" _blank" rel="noopener noreferrer">Reviews</a>
                                     <p class="book__text">Con un estilo audaz y desenfandado, este joven consultor
                                         desafía permanentemente al lector a tener coraje de quemar las naves. A
                                         abandonar sus viejos conocimientos, creencias y prejuicios. Lo incita a
@@ -1471,7 +1471,8 @@
                         <h4 class="bio__title">Guillermo Oliveto</h4>
                         <div class="bio__bottom">
                             <p class="bio__text">El autor es especialista en tendencias sociales y de consumo</p>
-                            <a href="#" class="bio__link" target="_blank" rel="noopener noreferrer">Ver artículos</a>
+                            <a href="#" class="bio__link" title="Ver artículos" target="_blank"
+                                rel="noopener noreferrer">Ver artículos</a>
                         </div>
                     </div>
                 </div>
@@ -1502,8 +1503,8 @@
                                 <div class="interview__info">
                                     <h3 class="interview__subtitle">El año que viene la inflación
                                         no va a bajar de 50%</h3>
-                                    <a href="#" class="interview__lkn" target="_blank" title="Ver video"
-                                        rel="noopener noreferrer">Ver video</a>
+                                    <a href="#" class="interview__lkn" title="Ver video" target="_blank"
+                                        title="Ver video" rel="noopener noreferrer">Ver video</a>
                                 </div>
                             </div>
                         </div>
@@ -1517,8 +1518,8 @@
                                 <span class="interview__date">17/10/23</span>
                                 <div class="interview__info">
                                     <h3 class="interview__subtitle">La sociedad sabe que el ajuste es inevitable</h3>
-                                    <a href="#" class="interview__lkn" target="_blank" title="Ver video"
-                                        rel="noopener noreferrer">Ver video</a>
+                                    <a href="#" class="interview__lkn" title="Ver video" target="_blank"
+                                        title="Ver video" rel="noopener noreferrer">Ver video</a>
                                 </div>
                             </div>
                         </div>
@@ -1533,8 +1534,8 @@
                                     <h3 class="interview__subtitle">21 Retail Day
                                         <span>Consultora W</span>
                                     </h3>
-                                    <a href="#" class="interview__lkn" target="_blank" title="Ver video"
-                                        rel="noopener noreferrer">Ver video</a>
+                                    <a href="#" class="interview__lkn" title="Ver video" target="_blank"
+                                        title="Ver video" rel="noopener noreferrer">Ver video</a>
                                 </div>
                             </div>
                         </div>
@@ -1548,8 +1549,8 @@
                                 <span class="interview__date">17/10/23</span>
                                 <div class="interview__info">
                                     <h3 class="interview__subtitle">La sociedad sabe que el ajuste es inevitable</h3>
-                                    <a href="#" class="interview__lkn" target="_blank" title="Ver video"
-                                        rel="noopener noreferrer">Ver video</a>
+                                    <a href="#" class="interview__lkn" title="Ver video" target="_blank"
+                                        title="Ver video" rel="noopener noreferrer">Ver video</a>
                                 </div>
                             </div>
                         </div>
@@ -1563,8 +1564,8 @@
                                 <span class="interview__date">21/06/23</span>
                                 <div class="interview__info">
                                     <h3 class="interview__subtitle">E21 Retail Day <span>Consultora W</span></h3>
-                                    <a href="#" class="interview__lkn" target="_blank" title="Ver video"
-                                        rel="noopener noreferrer">Ver video</a>
+                                    <a href="#" class="interview__lkn" title="Ver video" target="_blank"
+                                        title="Ver video" rel="noopener noreferrer">Ver video</a>
                                 </div>
                             </div>
                         </div>
@@ -1578,8 +1579,8 @@
                                 <span class="interview__date">10/01/24</span>
                                 <div class="interview__info">
                                     <h3 class="interview__subtitle">El análisis político de Guillermo Oliveto</h3>
-                                    <a href="#" class="interview__lkn" target="_blank" title="Ver video"
-                                        rel="noopener noreferrer">Ver video</a>
+                                    <a href="#" class="interview__lkn" title="Ver video" target="_blank"
+                                        title="Ver video" rel="noopener noreferrer">Ver video</a>
                                 </div>
                             </div>
                         </div>
@@ -1637,19 +1638,20 @@
                         <h4 class="footer__title">Contact us</h4>
                     </div>
                     <div class="footer__col">
-                        <a href="mailto:info@consultoraw.com.ar" class="footer__lkn" target="_blank"
-                            rel="noopener noreferrer">info@consultoraw.com.ar</a>
-                        <a href="mailto:news@almatrends.net" class="footer__lkn" target="_blank"
-                            rel="noopener noreferrer">news@almatrends.net</a>
+                        <a href="mailto:info@consultoraw.com.ar" title="info@consultoraw.com.ar" class="footer__lkn"
+                            target="_blank" rel="noopener noreferrer">info@consultoraw.com.ar</a>
+                        <a href="mailto:news@almatrends.net" title="news@almatrends.net" class="footer__lkn"
+                            target="_blank" rel="noopener noreferrer">news@almatrends.net</a>
                     </div>
                     <div class="footer__col">
-                        <a href="tel:+5491125080707" class="footer__lkn" target="_blank" rel="noopener noreferrer">T.
+                        <a href="tel:+5491125080707" title="5491125080707" class="footer__lkn" target="_blank"
+                            rel="noopener noreferrer">T.
                             +54 9 11 2508
                             0707</a>
                     </div>
                     <div class="footer__col">
-                        <a href="https://maps.app.goo.gl/cDwxh8zBsxjJNYJp9" class="footer__lkn" target="_blank"
-                            rel="noopener noreferrer">
+                        <a href="https://maps.app.goo.gl/cDwxh8zBsxjJNYJp9" class="footer__lkn"
+                            title="Martín Coronado 3260" target="_blank" rel="noopener noreferrer">
                             <span>Martín Coronado 3260,</span>
                             <span>Palacio Alcorta, Buenos Aires,</span>
                             <span>Argentina.</span>
@@ -1705,9 +1707,9 @@
                         física y digital a la vez? ¿Cómo imaginar los futuros posibles?</p>
                     <div class="lightbox__bottom">
                         <a href="#" class="lightbox__bottom__a lightbox__comprar" target="_blank"
-                            rel="noopener noreferrer">Comprar</a>
+                            rel="noopener noreferrer" title="Comprar">Comprar</a>
                         <a href="#" class="lightbox__bottom__a lightbox__reviews" target=" _blank"
-                            rel="noopener noreferrer">Reviews</a>
+                            rel="noopener noreferrer" title="Reviews">Reviews</a>
                     </div>
 
 
